[gd_scene load_steps=4 format=2]

[ext_resource path="res://entities/fluffisprout/sprite/fluffisprout.png" type="Texture" id=1]
[ext_resource path="res://items_selected/fluffisprout_item/fluffisprout_item.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 74.0

[node name="fluffisprout_item" type="StaticBody2D"]
collision_layer = 2147483652
collision_mask = 4
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -29 )
texture = ExtResource( 1 )

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = -88.0
margin_top = -97.0
margin_right = 97.0
margin_bottom = 100.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
